--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -2,18 +2,17 @@ name: Build&Test
 
 on:
   push:
-    branches: [ dev, main, master, '**' ]
+    branches: [dev, main, master, "**"]
   pull_request:
-    branches: [ dev, main, master ]
+    branches: [dev, main, master]
 
 jobs:
-
-  linux:    
-    name: build and test on ${{ matrix.os }} 
+  linux:
+    name: build and test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ubuntu-latest]
 
     services:
       redis6379:
@@ -27,36 +26,36 @@ jobs:
       redis6388:
         image: redis
         ports:
-          - 6388:6379        
+          - 6388:6379
       memcached1:
         image: bitnami/memcached
         ports:
-          - 11211:11211        
+          - 11211:11211
       memcached2:
         image: bitnami/memcached
         ports:
-          - 11212:11211      
+          - 11212:11211
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET SDK 6.0.x
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 6.0.x 
+      - uses: actions/checkout@v4
+      - name: Setup .NET SDK 8.0.x
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
 
-    - name: Show dotnet Version
-      run: |
-        dotnet --list-sdks
-        dotnet --list-runtimes
+      - name: Show dotnet Version
+        run: |
+          dotnet --list-sdks
+          dotnet --list-runtimes
 
-    - name: Show docker info
-      run: |
-        docker ps -a
+      - name: Show docker info
+        run: |
+          docker ps -a
 
-    - name: Build with dotnet      
-      run: |
-        dotnet build --configuration Release /home/runner/work/EasyCaching/EasyCaching/EasyCaching.sln
-   
-    - name: Run tests on net6.0
-      run: |
-        dotnet test --framework=net6.0 /home/runner/work/EasyCaching/EasyCaching/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
+      - name: Build with dotnet
+        run: |
+          dotnet build --configuration Release /home/runner/work/EasyCaching/EasyCaching/EasyCaching.sln
+
+      - name: Run tests on net8.0
+        run: |
+          dotnet test --framework=net8.0 /home/runner/work/EasyCaching/EasyCaching/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
