--- a/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
+++ b/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
@@ -17,11 +17,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EasyCaching.BaseTest" Version="1.9.3" />
+		<PackageReference Include="EasyCaching.BaseTest" Version="1.9.4-alpha20241014013439" />
 		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-		<PackageReference Include="xunit" Version="2.4.2" />
+		<PackageReference Include="xunit" Version="2.9.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
