--- a/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
+++ b/test/EasyCaching.UnitTests/EasyCaching.UnitTests.csproj
@@ -17,7 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EasyCaching.BaseTest" Version="1.9.4-alpha20241014013439" />
+		<PackageReference Include="EasyCaching.BaseTest" Version="1.9.4" />
 		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
